# CoRoute

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md
.claude/skills/migration-rls/: SKILL.md
.claude/skills/option-prompt-tuning/: SKILL.md
.claude/skills/privacy-leak-check/: SKILL.md
.claude/skills/seed-demo-data/: SKILL.md
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_group_insert_policies.py  0003_self_visible_select_policies.py  0004_membership_fn_security_definer.py  0005_group_pref_status_fn.py  0006_plan_preferences.py  0007_user_default_preferences.py  0008_connections.py
backend/app/: main.py  seed.py
backend/app/core/: config.py  db.py  deps.py  logging.py  security.py
backend/app/models/: __init__.py  enums.py  tables.py
backend/app/routers/: auth.py  connections.py  groups.py  plans.py  preferences.py  profile.py
backend/app/schemas/: auth.py  connection.py  group.py  plan.py  plan_preference.py  preference.py  profile.py
backend/app/services/: auth_service.py  connection_service.py  group_service.py  plan_preference_service.py  plan_service.py  preference_service.py  profile_service.py  synthesis.py
backend/tests/: conftest.py  test_privacy.py
docs/: data-model.md  privacy.md  schema.sql
docs/prompts/: generate-options.md
frontend/: .env.example  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/src/: api.ts  auth.tsx  components.tsx  main.tsx  styles.css
frontend/src/pages/: Connections.tsx  (+8 more)
scripts/: roles.sql
